[gd_scene load_steps=8 format=3 uid="uid://b37fcm7k338hf"]

[ext_resource type="VideoStream" path="res://tudo/Videos/danca_final.ogv" id="2_bdqff"]
[ext_resource type="Texture2D" uid="uid://bp8ma4dqka1s1" path="res://tudo/Botoes/botao.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dyac54buuv0pk" path="res://tudo/Botoes/BotaoClique.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cw4bqmy8mkmgt" path="res://tudo/Botoes/botaoAoClicar.png" id="5"]
[ext_resource type="Script" path="res://script/DANCA.gd" id="6"]
[ext_resource type="FontFile" uid="uid://chye5x60sbhrh" path="res://tudo/fonts/BRITANIC.TTF" id="6_jqpse"]
[ext_resource type="AudioStream" uid="uid://cncxsbo7uc0wl" path="res://tudo/sons/musicaDaDancaCazumba.mp3" id="7_dj3n2"]

[node name="DANCA" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("6")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 362.0
offset_bottom = 644.0
stream = ExtResource("2_bdqff")
autoplay = true
expand = true

[node name="botao1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 557.0
offset_right = 325.0
offset_bottom = 635.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("3")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("4")

[node name="Label" type="Label" parent="botao1"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 217.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("6_jqpse")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dj3n2")

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
